[package]
name = "diskv"
version = "0.1.0"
authors = ["Andreas N. <andreasmarketingpower@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.97" # required for T constraints
bincode = "1.1.4"
string-error = "0.1.0"
lru-cache = "0.1.2"